compiler-core/src/parse/snapshots/gleam_core__parse__tests__string_single_char_suggestion.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n    pub fn main() {\n        let a = 'example'\n      }\n    "
---
error: Syntax error
  ┌─ /src/parse/error.gleam:3:17
  │
3 │         let a = 'example'
  │                 ^ Unexpected single quote

Hint: Strings are written with double quotes.
